--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,11 @@
+@import url('./fonts.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,16 +18,100 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.icon-wrapper {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  position: absolute;
+  animation: floatSide 4s ease-in-out infinite;
+}
+
+.icon {
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+  object-fit: contain;
+  transition: transform 0.1s linear;
+  animation: floatY 5s ease-in-out infinite, floatX 4s ease-in-out infinite;
+}
+
+
+.background {
+  position: fixed;
+  background-image: url(/images/background.jpg); 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-attachment: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+  opacity: 1;
+  animation: zoomAndFadeIn 1.6s cubic-bezier(0.25, 0.8, 0.25, 1) forwards;
+}
+
+.cursor {
+  border-left: 0.1em solid white;
+  animation: blink 0.7s step-end infinite;
+}
+
+/*Javascript Functions*/
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1s 0.5s, transform 1s 0.5s;
+  animation: fadeInAnimation ease 1.5s;
+  animation-fill-mode: forwards;
+}
+
+.fade-in.is-visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.simple-fade-in {
+  opacity: 0;
+  transition: opacity 2s; 
+}
+
+.simple-fade-in.is-visible {
+  opacity: 1; 
+}
+
+@keyframes fadeIn {
+from {
+  opacity: 0;
+}
+to {
+  opacity: 1;
+}
+}
+
+@keyframes zoomAndFadeIn {
+  from {
+      opacity: 0.1;
+      transform: scale(1.4); 
+  }
+  to {
+      opacity: 0.5; 
+      transform: scale(1); 
+  }
+}
+
+@keyframes blink {
+  from, to { border-color: transparent }
+  50% { border-color: white }
 }
