--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,21 +3,22 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
-  --foreground-rgb: 0, 0, 0;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --foreground-rgb-light: 0, 0, 0;
+  --foreground-rgb-dark: 255, 255, 255;
+  --background-rgb-light: 255, 255, 255;
+  --background-rgb-dark: 32, 32, 32;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: rgb(var(--foreground-rgb-light));
+  background-color: rgb(var(--background-rgb-light));
+  transition: color 0.3s, background-color 0.3s;
+}
+
+body.dark-mode {
+  color: rgb(var(--foreground-rgb-dark));
+  background-color: rgb(var(--background-rgb-dark));
 }
 
 body.menu-open {
@@ -50,7 +51,6 @@ body.menu-open {
   animation: floatY 5s ease-in-out infinite, floatX 4s ease-in-out infinite;
 }
 
-
 .background {
   position: fixed;
   background-image: url(/images/background.jpg); 
@@ -72,7 +72,6 @@ body.menu-open {
   animation: blink 1.2s step-end infinite;
 }
 
-/*Javascript Functions*/
 .fade-in {
   opacity: 0;
   transform: translateY(20px);
@@ -108,26 +107,26 @@ body.menu-open {
 }
 
 @keyframes fadeIn {
-from {
-  opacity: 0;
-}
-to {
-  opacity: 1;
-}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes zoomAndFadeIn {
   from {
-      opacity: 0.1;
-      transform: scale(1.4); 
+    opacity: 0.1;
+    transform: scale(1.4); 
   }
   to {
-      opacity: 0.5; 
-      transform: scale(1); 
+    opacity: 0.5; 
+    transform: scale(1); 
   }
 }
 
 @keyframes blink {
-  from, to { border-color: transparent }
-  50% { border-color: white }
+  from, to { border-color: transparent; }
+  50% { border-color: white; }
 }
