--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,34 +1,128 @@
 @import url('./fonts.css');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+  .bg-light-menu {
+    background-color: var(--background-color-light);
+  }
+  .dark .bg-dark-menu {
+    background-color: var(--background-color-dark);
+  }
+}
+
 :root {
-  --foreground-rgb-light: 0, 0, 0;
-  --foreground-rgb-dark: 255, 255, 255;
-  --background-rgb-light: 255, 255, 255;
-  --background-rgb-dark: 32, 32, 32;
+  --foreground-color-dark: rgb(0, 0, 0);
+  --background-color-dark: rgb(255, 255, 255);
+  --foreground-color-light: rgb(255, 255, 255);
+  --background-color-light: rgb(32, 32, 32);
+  --bg-color-dark: rgba(255, 255, 255,  0.7); /* 50% transparent white */
+  --bg-color-light: rgba(0, 0, 0, 0.7); /* 50% transparent black */
+  --background-image-dark: url('/images/background-white-native.jpg');
+  --background-image-light: url('/images/background.jpg');
+  --border-color-light: white;
+  --border-color-dark: black;
+  --cursor-color-light: black;
+  --cursor-color-dark: white;
+  --overlay-color-light: rgba(0, 0, 0, 0.4); 
+  --overlay-color-dark: rgba(0, 0, 0, 0.1);
 }
 
 body {
-  color: rgb(var(--foreground-rgb-light));
-  background-color: rgb(var(--background-rgb-light));
-  transition: color 0.3s, background-color 0.3s;
+  color: var(--foreground-color-light);
+  background-color: var(--background-color-light);
+  background-image: var(--background-image-light);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  position: relative;
+  transition: color 0.3s, background-color 0.3s, background-image 0.3s;
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--overlay-color-light); /* Overlay for light mode */
+  z-index: -1;
+  pointer-events: none;
+  transition: background-color 0.3s;
 }
 
 body.dark-mode {
-  color: rgb(var(--foreground-rgb-dark));
-  background-color: rgb(var(--background-rgb-dark));
+  color: var(--foreground-color-dark);
+  background-color: var(--background-color-dark);
+  background-image: var(--background-image-dark);
+}
+
+body.dark-mode::before {
+  background: var(--overlay-color-dark);
+}
+
+body.dark-mode #portrait {
+  display: none;
+}
+
+body.dark-mode article {
+  transition: margin-left 0.5s ease-in-out;
+  margin-left: 50%;
+}
+
+body.dark-mode .education-entry {
+  border-color: var(--foreground-color-dark);
+}
+
+body.dark-mode .cursor {
+  border-left: 0.05em solid var(--cursor-color-dark);
+  animation: blink-dark 1.2s step-end infinite;
+}
+
+body.dark-mode .education-entry h3,
+body.dark-mode .education-entry p,
+body.dark-mode .education-entry ul li {
+  color: var(--foreground-color-dark);
 }
 
 body.menu-open {
   overflow: hidden;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+body.dark-mode .bg {
+  border-color: var(--border-color-dark);
+}
+
+body.dark-mode .border {
+  border-color: var(--border-color-dark);
+}
+
+body.dark-mode .border-b {
+  border-color: var(--border-color-dark);
+}
+
+#links a {
+  background-color: var(--bg-color-light);
+  transition: background-color 0.3s;
+}
+
+#menucontainer {
+  background-color: var(--background-color-light);
+}
+
+body.dark-mode #links a {
+  background-color: var(--bg-color-dark);
+}
+
+.border {
+  border-color: var(--border-color);
 }
 
 .icon-wrapper {
@@ -51,25 +145,9 @@ body.menu-open {
   animation: floatY 5s ease-in-out infinite, floatX 4s ease-in-out infinite;
 }
 
-.background {
-  position: fixed;
-  background-image: url(/images/background.jpg); 
-  background-size: cover; 
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-attachment: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 0;
-  opacity: 1;
-  animation: zoomAndFadeIn 1.6s cubic-bezier(0.25, 0.8, 0.25, 1) forwards;
-}
-
 .cursor {
-  border-left: 0.05em solid white;
-  animation: blink 1.2s step-end infinite;
+  border-left: 0.05em solid var(--cursor-color-light);
+  animation: blink-light 1.2s step-end infinite;
 }
 
 .fade-in {
@@ -87,7 +165,7 @@ body.menu-open {
 
 .simple-fade-in {
   opacity: 0;
-  transition: opacity 2s; 
+  transition: opacity 1.5s; 
 }
 
 .simple-fade-in.is-visible {
@@ -126,7 +204,26 @@ body.menu-open {
   }
 }
 
-@keyframes blink {
-  from, to { border-color: transparent; }
-  50% { border-color: white; }
+@keyframes blink-light {
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: var(--cursor-color-dark);
+  }
+}
+
+@keyframes blink-dark {
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: var(--cursor-color-light);
+  }
+}
+
+@media (max-width: 1024px) {
+  body.dark-mode article {
+    margin-left: 0 !important; /* Removes the margin-left on mobile devices */
+  }
 }
