--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -289,6 +289,33 @@ body.dark-mode #links a {
   }
 }
 
+.carousel-container {
+  width: 100%;
+  height: 720px;
+  overflow: visible;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.carousel-container.show {
+  opacity: 1;
+}
+
+.hidden-carousel {
+  display: none;
+}
+
+
+
+.carousel-item {
+  height: 720px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
 .carousel .slide img {
   height: 100vh;
   object-fit: cover;
