--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,11 @@
   }
 }
 
-html {
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   scroll-behavior: smooth;
 }
 
@@ -271,56 +275,19 @@ body.dark-mode #links a {
   }
 }
 
-/* Ensure the zoom-container doesn't affect the screen size */
 .zoom-container {
-  animation: initial-zoom 4s forwards;
+  animation: initial-zoom 1s ease-in-out forwards;
   position: relative;
-  width: 100%;  /* Ensure full width */
-  height: 100%; /* Ensure full height */
+  width: 100%;
+  height: calc(100vh - 64px); /* Adjust based on your navbar height if you have one */
+  overflow: hidden;
 }
 
-/* Keyframes for initial zoom animation */
 @keyframes initial-zoom {
   0% {
-    transform: scale(1.1);
+    transform: scale(10);
   }
   100% {
     transform: scale(1);
   }
-}
-
-.carousel-container {
-  width: 100%;
-  height: 720px;
-  overflow: visible;
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-.carousel-container.show {
-  opacity: 1;
-}
-
-.hidden-carousel {
-  display: none;
-}
-
-
-
-.carousel-item {
-  height: 720px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-
-.carousel .slide img {
-  height: 100vh;
-  object-fit: cover;
-}
-
-.no-transition {
-  transition: none !important;
 }
