--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -201,6 +201,12 @@ body.dark-mode #links a {
   background: var(--background-color-light);
 }
 
+/* globals.css */
+.grecaptcha-badge {
+  display: none;
+}
+
+
 @keyframes fadeIn {
   from {
     opacity: 0;
