--- a/src/app/fonts.css
+++ b/src/app/fonts.css
@@ -1,5 +1,5 @@
 /* public/fonts.css */
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 .ibm-plex-mono-light {
   font-family: "IBM Plex Mono", monospace;
@@ -14,15 +14,17 @@
 }
 
 @font-face {
-  font-family: 'HiraKakuPro';
-  src: url('/fonts/HiraKakuPro-W3.otf') format('opentype');
+  font-family: "HiraKakuPro";
+  src: url("/fonts/HiraKakuPro-W3.otf") format("opentype");
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-  font-family: 'HiraKakuPro';
-  src: url('/fonts/HiraKakuPro-W6.otf') format('opentype');
+  font-family: "HiraKakuPro";
+  src: url("/fonts/HiraKakuPro-W6.otf") format("opentype");
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
